--- a/.github/workflows/gatsby_publish_pages.yaml
+++ b/.github/workflows/gatsby_publish_pages.yaml
@@ -9,9 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: enriikke/gatsby-gh-pages-action@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
-          access-token: ${{ secrets.ACCESS_TOKEN }}
-          deploy-branch: gh-pages
-          gatsby-args: --prefix-paths
+          node-version: '12.x'
+      - run: npm install
+      - run: npm run deploy
