--- a/.github/workflows/gatsby_publish_pages.yaml
+++ b/.github/workflows/gatsby_publish_pages.yaml
@@ -11,4 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm install
+      # set git user name and email
+      - run: git config --global user.name "github-actions[bot]"
+      - run: git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
       - run: npm run deploy
