--- a/.github/workflows/gatsby_publish_pages.yaml
+++ b/.github/workflows/gatsby_publish_pages.yaml
@@ -5,14 +5,21 @@ on:
     branches:
       - main
 
+env:
+  GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: npm install
-      # set git user name and email to the user who triggered the action
-      - run: |
-          git config --global user.name "${{ github.actor }}"
+      - name: GitHub Config
+        run: |
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-      - run: npm run deploy
+          git config --global user.name "${{ github.actor }}"
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          npm install
+      - name: Deploy
+        run: npm run deploy:ci
