--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^1.3.4",
     "emailjs-com": "^2.6.4",
     "gh-pages": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
-    "smooth-scroll": "^16.1.3"
+    "smooth-scroll": "^16.1.3",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
