--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.8.0",
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
