--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "emailjs-com": "^2.6.4",
     "gh-pages": "^5.0.0",
     "react": "^17.0.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.1",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.5",
+    "react-resizable": "^3.0.4",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
+    "react-table": "^7.8.0",
     "smooth-scroll": "^16.1.3",
     "uuid": "^9.0.0"
   },
