--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
     "smooth-scroll": "^16.1.3",
     "uuid": "^9.0.0"
   },
