--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "emailjs-com": "^2.6.4",
     "fs": "^0.0.1-security",
     "gh-pages": "^5.0.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.7.2",
     "react-csv": "^2.2.2",
     "react-dom": "^17.0.1",
     "react-icons": "^4.8.0",
