changed footer to have project in ot and opsci team as cretor of the template

--- a/src/data/project_crates.json
+++ b/src/data/project_crates.json
@@ -1,6 +1,6 @@
 [
     {
-      "icon": "fa fa-wordpress",
+      "icon": "fa fa-archive",
       "name": "Lorem ipsum dolor",
       "url" : "http://www.google.com",
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
