--- a/src/data/project_profiles.json
+++ b/src/data/project_profiles.json
@@ -1,6 +1,6 @@
 [
   {
-    "icon": "fa fa-comments-o",
+    "icon": "fa fa-book",
     "title": "Lorem ipsum",
     "url" : "http://www.google.com",
     "text": "Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam."
