--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.3.1",
     "emailjs-com": "^2.6.4",
     "fs": "^0.0.1-security",
     "gh-pages": "^5.0.0",
