--- a/src/data/project_crates.json
+++ b/src/data/project_crates.json
@@ -3,6 +3,7 @@
       "icon": "fa fa-archive",
       "name": "Lorem ipsum dolor",
       "url" : "http://www.google.com",
+      "crateurl": "https://w3id.org/ro/crate/1",
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
     },
     {
@@ -20,30 +21,35 @@
       "icon": "fa fa-cart-arrow-down",
       "name": "Consectetur adipiscing",
       "url" : "http://www.google.com",
+      "crateurl": "https://w3id.org/ro/crate/1",
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."
     },
     {
       "icon": "fa fa-cloud-download",
       "name": "Lorem ipsum dolor",
       "url" : "http://www.google.com",
+      "crateurl": "https://w3id.org/ro/crate/1",
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."
     },
     {
       "icon": "fa fa-language",
       "name": "Consectetur adipiscing",
       "url" : "http://www.google.com",
+      "crateurl": "https://w3id.org/ro/crate/1",
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."
     },
     {
       "icon": "fa fa-plane",
       "name": "Lorem ipsum dolor",
       "url" : "http://www.google.com",
+      "crateurl": "https://w3id.org/ro/crate/1",
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."
     },
     {
       "icon": "fa fa-pie-chart",
       "name": "Consectetur adipiscing",
       "url" : "http://www.google.com",
+      "crateurl": "https://w3id.org/ro/crate/1",
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."
     }
 ]
