--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0",
+    "html-webpack-plugin": "^5.6.3",
     "react-app-rewired": "^2.2.1"
   },
   "homepage": "./"
