--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.6.3",
     "react-app-rewired": "^2.2.1"
